package MyDemoCode;


import java.util.List;

public interface IceCream {
    List<String> getAddons();
    String getDescription();
    double getCost();

}
